# SpreadMaster

./: .env  .gitignore  README.md  app.db  app.py  auto_trader.py  check_tables.py  config.json  create_db.py  create_db_fixed.py  create_user.py  create_user_sql.py  debug_keys.py  exchanges.py  final_check.py  manual_create_db.py  models.py  pyproject.toml  replit.md  requirements.txt  run_app.py  spread_calculator.py  test_keys.py  test_okx.py  новый 1.txt
instance/: app.db
static/: app.js  style.css
templates/: index.html  login.html
